[package]
name = "smtpapi"
version = "0.1.3"
authors = ["Sorin Baba <sorin.baba@sendgrid.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = "This crate allows you to quickly and more easily generate SendGrid X-SMTPAPI headers."

# These URLs point to more information about the repository
documentation = "https://bsorin.github.io/doc/0.1/smtpapi/"
homepage = "https://github.com/bsorin/smtpapi-rs"
repository = "https://github.com/bsorin/smtpapi-rs"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["email", "headers", "sendgrid", "x-smtpapi", "smtpapi"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT"

[lib]
name = "smtpapi"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
harness = true

[dependencies]
rustc-serialize = "0.3"

[dev-dependencies]
time = "0.1"
